--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,14 +1,15 @@
-ul {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-
-    div {
+@media screen and (min-width: 600px) {
+    ul {
         display: flex;
-        margin-left: 20px;
-        margin-right: 30px;
-        li {
-            margin: 10px 20px;
+        justify-content: space-between;
+        list-style: none;
+        div {
+            display: flex;
+            margin-left: 20px;
+            margin-right: 30px;
+            li {
+                margin: 10px 20px;
+            }
         }
     }
 }
