Map function for header menu

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,4 +1,6 @@
-ul {
+
+
+/*ul {
     display: flex;
     justify-content: space-between;
     list-style: none;
@@ -46,6 +48,5 @@ ul {
         }
     }
 }
-
-// if device width > 600px
+*/
 
